removed z-index from initials class to fix the overlapping text issue

--- a/jsx_refactor/client/automation-finder/src/components/TriggerCards/style.css
+++ b/jsx_refactor/client/automation-finder/src/components/TriggerCards/style.css
@@ -33,7 +33,7 @@
 .initials {
     color: black;
     margin-left: 6px;
-    z-index: 2;
+    /* z-index: 2; */
 }
 
 .person-icon {
